@@ -6677,3 +6677,334 @@ PyTypeObject TimerType = {
     0,                                              /* tp_alloc */
     Timer_new,                                     /* tp_new */
 };
+
+/*********************************************************************************************/
+/* Iter ********************************************************************************/
+/*********************************************************************************************/
+typedef struct {
+    pyo_audio_HEAD
+    PyObject *input;
+    Stream *input_stream;
+    int chSize;
+    int chCount;
+    MYFLT *choice;
+    MYFLT value;
+    int modebuffer[2]; // need at least 2 slots for mul & add 
+} Iter;
+
+static void
+Iter_generate(Iter *self) {
+    int i;
+    MYFLT *in = Stream_getData((Stream *)self->input_stream);
+    
+    for (i=0; i<self->bufsize; i++) {
+        if (in[i] == 1) {
+            if (self->chCount >= self->chSize)
+                self->chCount = 0;
+            self->value = self->choice[self->chCount];
+            self->chCount++;
+        }
+        self->data[i] = self->value;
+    }
+}
+
+static void Iter_postprocessing_ii(Iter *self) { POST_PROCESSING_II };
+static void Iter_postprocessing_ai(Iter *self) { POST_PROCESSING_AI };
+static void Iter_postprocessing_ia(Iter *self) { POST_PROCESSING_IA };
+static void Iter_postprocessing_aa(Iter *self) { POST_PROCESSING_AA };
+static void Iter_postprocessing_ireva(Iter *self) { POST_PROCESSING_IREVA };
+static void Iter_postprocessing_areva(Iter *self) { POST_PROCESSING_AREVA };
+static void Iter_postprocessing_revai(Iter *self) { POST_PROCESSING_REVAI };
+static void Iter_postprocessing_revaa(Iter *self) { POST_PROCESSING_REVAA };
+static void Iter_postprocessing_revareva(Iter *self) { POST_PROCESSING_REVAREVA };
+
+static void
+Iter_setProcMode(Iter *self)
+{
+    int muladdmode;
+    muladdmode = self->modebuffer[0] + self->modebuffer[1] * 10;
+    
+    self->proc_func_ptr = Iter_generate;
+    
+	switch (muladdmode) {
+        case 0:        
+            self->muladd_func_ptr = Iter_postprocessing_ii;
+            break;
+        case 1:    
+            self->muladd_func_ptr = Iter_postprocessing_ai;
+            break;
+        case 2:    
+            self->muladd_func_ptr = Iter_postprocessing_revai;
+            break;
+        case 10:        
+            self->muladd_func_ptr = Iter_postprocessing_ia;
+            break;
+        case 11:    
+            self->muladd_func_ptr = Iter_postprocessing_aa;
+            break;
+        case 12:    
+            self->muladd_func_ptr = Iter_postprocessing_revaa;
+            break;
+        case 20:        
+            self->muladd_func_ptr = Iter_postprocessing_ireva;
+            break;
+        case 21:    
+            self->muladd_func_ptr = Iter_postprocessing_areva;
+            break;
+        case 22:    
+            self->muladd_func_ptr = Iter_postprocessing_revareva;
+            break;
+    }  
+}
+
+static void
+Iter_compute_next_data_frame(Iter *self)
+{
+    (*self->proc_func_ptr)(self); 
+    (*self->muladd_func_ptr)(self);
+}
+
+static int
+Iter_traverse(Iter *self, visitproc visit, void *arg)
+{
+    pyo_VISIT
+    Py_VISIT(self->input);
+    Py_VISIT(self->input_stream);
+    return 0;
+}
+
+static int 
+Iter_clear(Iter *self)
+{
+    pyo_CLEAR
+    Py_CLEAR(self->input);
+    Py_CLEAR(self->input_stream);
+    return 0;
+}
+
+static void
+Iter_dealloc(Iter* self)
+{
+    free(self->data);
+    free(self->choice);
+    Iter_clear(self);
+    self->ob_type->tp_free((PyObject*)self);
+}
+
+static PyObject * Iter_deleteStream(Iter *self) { DELETE_STREAM };
+
+static PyObject *
+Iter_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
+{
+    int i;
+    Iter *self;
+    self = (Iter *)type->tp_alloc(type, 0);
+    
+    self->value = 0.;
+    self->chCount = 0;
+	self->modebuffer[0] = 0;
+	self->modebuffer[1] = 0;
+    
+    INIT_OBJECT_COMMON
+    Stream_setFunctionPtr(self->stream, Iter_compute_next_data_frame);
+    self->mode_func_ptr = Iter_setProcMode;
+    return (PyObject *)self;
+}
+
+static int
+Iter_init(Iter *self, PyObject *args, PyObject *kwds)
+{
+    MYFLT inittmp = 0.0;
+    PyObject *inputtmp, *input_streamtmp, *choicetmp=NULL, *multmp=NULL, *addtmp=NULL;
+    
+    static char *kwlist[] = {"input", "choice", "init", "mul", "add", NULL};
+    
+    if (! PyArg_ParseTupleAndKeywords(args, kwds, TYPE_OO_FOO, kwlist, &inputtmp, &choicetmp, &inittmp, &multmp, &addtmp))
+        return -1; 
+    
+    INIT_INPUT_STREAM
+    
+    if (choicetmp) {
+        PyObject_CallMethod((PyObject *)self, "setChoice", "O", choicetmp);
+    }
+    
+    if (multmp) {
+        PyObject_CallMethod((PyObject *)self, "setMul", "O", multmp);
+    }
+    
+    if (addtmp) {
+        PyObject_CallMethod((PyObject *)self, "setAdd", "O", addtmp);
+    }
+    
+    Py_INCREF(self->stream);
+    PyObject_CallMethod(self->server, "addStream", "O", self->stream);
+
+    self->value = inittmp;
+    
+    (*self->mode_func_ptr)(self);
+    
+    Py_INCREF(self);
+    return 0;
+}
+
+static PyObject * Iter_getServer(Iter* self) { GET_SERVER };
+static PyObject * Iter_getStream(Iter* self) { GET_STREAM };
+static PyObject * Iter_setMul(Iter *self, PyObject *arg) { SET_MUL };	
+static PyObject * Iter_setAdd(Iter *self, PyObject *arg) { SET_ADD };	
+static PyObject * Iter_setSub(Iter *self, PyObject *arg) { SET_SUB };	
+static PyObject * Iter_setDiv(Iter *self, PyObject *arg) { SET_DIV };	
+
+static PyObject * Iter_play(Iter *self, PyObject *args, PyObject *kwds) { PLAY };
+static PyObject * Iter_out(Iter *self, PyObject *args, PyObject *kwds) { OUT };
+static PyObject * Iter_stop(Iter *self) { STOP };
+
+static PyObject * Iter_multiply(Iter *self, PyObject *arg) { MULTIPLY };
+static PyObject * Iter_inplace_multiply(Iter *self, PyObject *arg) { INPLACE_MULTIPLY };
+static PyObject * Iter_add(Iter *self, PyObject *arg) { ADD };
+static PyObject * Iter_inplace_add(Iter *self, PyObject *arg) { INPLACE_ADD };
+static PyObject * Iter_sub(Iter *self, PyObject *arg) { SUB };
+static PyObject * Iter_inplace_sub(Iter *self, PyObject *arg) { INPLACE_SUB };
+static PyObject * Iter_div(Iter *self, PyObject *arg) { DIV };
+static PyObject * Iter_inplace_div(Iter *self, PyObject *arg) { INPLACE_DIV };
+
+static PyObject *
+Iter_setChoice(Iter *self, PyObject *arg)
+{
+    int i;
+	PyObject *tmp;
+	
+	if (! PyList_Check(arg)) {
+        PyErr_SetString(PyExc_TypeError, "The choice attribute must be a list.");
+		Py_INCREF(Py_None);
+		return Py_None;
+	}
+    
+    tmp = arg;
+    self->chSize = PyList_Size(tmp);
+    self->choice = (MYFLT *)realloc(self->choice, self->chSize * sizeof(MYFLT));
+    for (i=0; i<self->chSize; i++) {
+        self->choice[i] = PyFloat_AS_DOUBLE(PyNumber_Float(PyList_GET_ITEM(tmp, i)));
+    }
+    
+    (*self->mode_func_ptr)(self);
+    
+	Py_INCREF(Py_None);
+	return Py_None;
+}	
+
+static PyObject * 
+Iter_reset(Iter *self)
+{
+    self->chCount = 0;
+	Py_INCREF(Py_None);
+	return Py_None;
+}
+
+static PyMemberDef Iter_members[] = {
+    {"server", T_OBJECT_EX, offsetof(Iter, server), 0, "Pyo server."},
+    {"stream", T_OBJECT_EX, offsetof(Iter, stream), 0, "Stream object."},
+    {"input", T_OBJECT_EX, offsetof(Iter, input), 0, "Input sound object."},
+    {"mul", T_OBJECT_EX, offsetof(Iter, mul), 0, "Mul factor."},
+    {"add", T_OBJECT_EX, offsetof(Iter, add), 0, "Add factor."},
+    {NULL}  /* Sentinel */
+};
+
+static PyMethodDef Iter_methods[] = {
+    {"getServer", (PyCFunction)Iter_getServer, METH_NOARGS, "Returns server object."},
+    {"_getStream", (PyCFunction)Iter_getStream, METH_NOARGS, "Returns stream object."},
+    {"deleteStream", (PyCFunction)Iter_deleteStream, METH_NOARGS, "Remove stream from server and delete the object."},
+    {"play", (PyCFunction)Iter_play, METH_VARARGS|METH_KEYWORDS, "Starts computing without sending sound to soundcard."},
+    {"out", (PyCFunction)Iter_out, METH_VARARGS|METH_KEYWORDS, "Starts computing and sends sound to soundcard channel speficied by argument."},
+    {"stop", (PyCFunction)Iter_stop, METH_NOARGS, "Stops computing."},
+    {"setChoice", (PyCFunction)Iter_setChoice, METH_O, "Sets possible values."},
+    {"reset", (PyCFunction)Iter_reset, METH_NOARGS, "Resets count to 0."},
+    {"setMul", (PyCFunction)Iter_setMul, METH_O, "Sets oscillator mul factor."},
+    {"setAdd", (PyCFunction)Iter_setAdd, METH_O, "Sets oscillator add factor."},
+    {"setSub", (PyCFunction)Iter_setSub, METH_O, "Sets inverse add factor."},
+    {"setDiv", (PyCFunction)Iter_setDiv, METH_O, "Sets inverse mul factor."},
+    {NULL}  /* Sentinel */
+};
+
+static PyNumberMethods Iter_as_number = {
+    (binaryfunc)Iter_add,                         /*nb_add*/
+    (binaryfunc)Iter_sub,                         /*nb_subtract*/
+    (binaryfunc)Iter_multiply,                    /*nb_multiply*/
+    (binaryfunc)Iter_div,                                              /*nb_divide*/
+    0,                                              /*nb_remainder*/
+    0,                                              /*nb_divmod*/
+    0,                                              /*nb_power*/
+    0,                                              /*nb_neg*/
+    0,                                              /*nb_pos*/
+    0,                                              /*(unaryfunc)array_abs,*/
+    0,                                              /*nb_nonzero*/
+    0,                                              /*nb_invert*/
+    0,                                              /*nb_lshift*/
+    0,                                              /*nb_rshift*/
+    0,                                              /*nb_and*/
+    0,                                              /*nb_xor*/
+    0,                                              /*nb_or*/
+    0,                                              /*nb_coerce*/
+    0,                                              /*nb_int*/
+    0,                                              /*nb_long*/
+    0,                                              /*nb_float*/
+    0,                                              /*nb_oct*/
+    0,                                              /*nb_hex*/
+    (binaryfunc)Iter_inplace_add,                 /*inplace_add*/
+    (binaryfunc)Iter_inplace_sub,                 /*inplace_subtract*/
+    (binaryfunc)Iter_inplace_multiply,            /*inplace_multiply*/
+    (binaryfunc)Iter_inplace_div,                                              /*inplace_divide*/
+    0,                                              /*inplace_remainder*/
+    0,                                              /*inplace_power*/
+    0,                                              /*inplace_lshift*/
+    0,                                              /*inplace_rshift*/
+    0,                                              /*inplace_and*/
+    0,                                              /*inplace_xor*/
+    0,                                              /*inplace_or*/
+    0,                                              /*nb_floor_divide*/
+    0,                                              /*nb_true_divide*/
+    0,                                              /*nb_inplace_floor_divide*/
+    0,                                              /*nb_inplace_true_divide*/
+    0,                                              /* nb_index */
+};
+
+PyTypeObject IterType = {
+    PyObject_HEAD_INIT(NULL)
+    0,                                              /*ob_size*/
+    "_pyo.Iter_base",                                   /*tp_name*/
+    sizeof(Iter),                                 /*tp_basicsize*/
+    0,                                              /*tp_itemsize*/
+    (destructor)Iter_dealloc,                     /*tp_dealloc*/
+    0,                                              /*tp_print*/
+    0,                                              /*tp_getattr*/
+    0,                                              /*tp_setattr*/
+    0,                                              /*tp_compare*/
+    0,                                              /*tp_repr*/
+    &Iter_as_number,                              /*tp_as_number*/
+    0,                                              /*tp_as_sequence*/
+    0,                                              /*tp_as_mapping*/
+    0,                                              /*tp_hash */
+    0,                                              /*tp_call*/
+    0,                                              /*tp_str*/
+    0,                                              /*tp_getattro*/
+    0,                                              /*tp_setattro*/
+    0,                                              /*tp_as_buffer*/
+    Py_TPFLAGS_DEFAULT | Py_TPFLAGS_BASETYPE | Py_TPFLAGS_HAVE_GC | Py_TPFLAGS_CHECKTYPES, /*tp_flags*/
+    "Iter objects. Triggers iterate over a list of values.",           /* tp_doc */
+    (traverseproc)Iter_traverse,                  /* tp_traverse */
+    (inquiry)Iter_clear,                          /* tp_clear */
+    0,                                              /* tp_richcompare */
+    0,                                              /* tp_weaklistoffset */
+    0,                                              /* tp_iter */
+    0,                                              /* tp_iternext */
+    Iter_methods,                                 /* tp_methods */
+    Iter_members,                                 /* tp_members */
+    0,                                              /* tp_getset */
+    0,                                              /* tp_base */
+    0,                                              /* tp_dict */
+    0,                                              /* tp_descr_get */
+    0,                                              /* tp_descr_set */
+    0,                                              /* tp_dictoffset */
+    (initproc)Iter_init,                          /* tp_init */
+    0,                                              /* tp_alloc */
+    Iter_new,                                     /* tp_new */
+};
